DroneArmy/run_client_log_6.txt

> Configure project :
Fabric Loom: 1.14.10
Project directory 'C:\Users\carte\OneDrive\Desktop\Code\MC Mods\DroneArmy' is located in OneDrive. This is known to cause issues and slower performance. Consider moving the project to a different location.

> Task :compileJava FAILED
C:\Users\carte\OneDrive\Desktop\Code\MC Mods\DroneArmy\src\main\java\com\drone_army\mixin\MobEntityMixin.java:64: error: incompatible types: MobEntityMixin cannot be converted to MobEntity
        if (this instanceof MobEntity mob) {
            ^
C:\Users\carte\OneDrive\Desktop\Code\MC Mods\DroneArmy\src\main\java\com\drone_army\mixin\MobEntityMixin.java:66: error: incompatible types: MobEntity cannot be converted to PathAwareEntity
            mob.getGoalSelector().add(6, new com.drone_army.entity.ai.DroneFollowGoal(mob, 1.25D, 10.0F, 5.0F));
                                                                                      ^
C:\Users\carte\OneDrive\Desktop\Code\MC Mods\DroneArmy\src\main\java\com\drone_army\mixin\MobEntityMixin.java:66: error: cannot find symbol
            mob.getGoalSelector().add(6, new com.drone_army.entity.ai.DroneFollowGoal(mob, 1.25D, 10.0F, 5.0F));
               ^
  symbol:   method getGoalSelector()
  location: variable mob of type MobEntity
C:\Users\carte\OneDrive\Desktop\Code\MC Mods\DroneArmy\src\main\java\com\drone_army\mixin\MobEntityMixin.java:72: error: cannot find symbol
            mob.getTargetSelector().add(2, new com.drone_army.entity.ai.DroneTargetGoal<>(mob,
               ^
  symbol:   method getTargetSelector()
  location: variable mob of type MobEntity
C:\Users\carte\OneDrive\Desktop\Code\MC Mods\DroneArmy\src\main\java\com\drone_army\mixin\MobEntityMixin.java:75: error: cannot find symbol
            mob.getTargetSelector().add(3, new com.drone_army.entity.ai.DroneTargetGoal<>(mob,
               ^
  symbol:   method getTargetSelector()
  location: variable mob of type MobEntity
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
5 errors

[Incubating] Problems report is available at: file:///C:/Users/carte/OneDrive/Desktop/Code/MC%20Mods/DroneArmy/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\carte\OneDrive\Desktop\Code\MC Mods\DroneArmy\src\main\java\com\drone_army\mixin\MobEntityMixin.java:64: error: incompatible types: MobEntityMixin cannot be converted to MobEntity
          if (this instanceof MobEntity mob) {
              ^
  C:\Users\carte\OneDrive\Desktop\Code\MC Mods\DroneArmy\src\main\java\com\drone_army\mixin\MobEntityMixin.java:66: error: incompatible types: MobEntity cannot be converted to PathAwareEntity
              mob.getGoalSelector().add(6, new com.drone_army.entity.ai.DroneFollowGoal(mob, 1.25D, 10.0F, 5.0F));
                                                                                        ^
  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
  C:\Users\carte\OneDrive\Desktop\Code\MC Mods\DroneArmy\src\main\java\com\drone_army\mixin\MobEntityMixin.java:66: error: cannot find symbol
              mob.getGoalSelector().add(6, new com.drone_army.entity.ai.DroneFollowGoal(mob, 1.25D, 10.0F, 5.0F));
                 ^
    symbol:   method getGoalSelector()
    location: variable mob of type MobEntity
  C:\Users\carte\OneDrive\Desktop\Code\MC Mods\DroneArmy\src\main\java\com\drone_army\mixin\MobEntityMixin.java:72: error: cannot find symbol
              mob.getTargetSelector().add(2, new com.drone_army.entity.ai.DroneTargetGoal<>(mob,
                 ^
    symbol:   method getTargetSelector()
    location: variable mob of type MobEntity
  C:\Users\carte\OneDrive\Desktop\Code\MC Mods\DroneArmy\src\main\java\com\drone_army\mixin\MobEntityMixin.java:75: error: cannot find symbol
              mob.getTargetSelector().add(3, new com.drone_army.entity.ai.DroneTargetGoal<>(mob,
                 ^
    symbol:   method getTargetSelector()
    location: variable mob of type MobEntity
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 2s
1 actionable task: 1 executed
